<resources>
    <string name="app_name">ToolsDesign</string>
    <string name="initString">Code change the world!</string>
    <string name="login_in">登录</string>
    <string name="register">注册账号</string>
    <string name="userName">账号/工具号</string>
    <string name="register_name">请输入账号</string>
    <string name="register_password">请输入密码</string>
    <string name="password">密码</string>
    <string name="register_button">注册</string>
    <string name="channel_name">注册渠道名字</string>
    <string name="channel_description">注册通知渠道描述</string>
    <string name="login_icon">登录界面图标</string>
    <string name="register_backButton">注册返回按钮</string>
    <string name="register_icon">注册界面图标</string>
</resources>