<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.fragment.RegisterFragment">

    <ImageButton
        android:id="@+id/fragment_register_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/transparent"
        android:src="@drawable/back_button_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/register_backButton" />

    <ImageView
        android:id="@+id/fragment_register_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/register_icon" />

    <EditText
        android:id="@+id/fragment_register_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/register_name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_icon"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/fragment_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/register_password"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_register_userName"
        app:layout_constraintStart_toStartOf="@+id/fragment_register_userName"
        app:layout_constraintTop_toBottomOf="@id/fragment_register_userName"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/fragment_register_confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/register_password"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_register_password"
        app:layout_constraintStart_toStartOf="@+id/fragment_register_password"
        app:layout_constraintTop_toBottomOf="@id/fragment_register_password"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/fragment_register_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/blue"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_register_confirmPassword"
        app:layout_constraintStart_toStartOf="@+id/fragment_register_confirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/fragment_register_confirmPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>