<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.fragment.LoginFragment">

    <ImageView
        android:id="@+id/fragment_login_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_login_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/userName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_icon" />

    <EditText
        android:id="@+id/fragment_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_login_userName"
        app:layout_constraintStart_toStartOf="@+id/fragment_login_userName"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_userName" />

    <TextView
        android:id="@+id/fragment_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/register"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/fragment_login_password"
        app:layout_constraintTop_toBottomOf="@id/fragment_login_password" />

    <Button
        android:id="@+id/fragment_login_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/blue"
        android:text="@string/login_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_login_password"
        app:layout_constraintStart_toStartOf="@+id/fragment_login_password"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_register" />


</androidx.constraintlayout.widget.ConstraintLayout>